[gd_scene load_steps=51 format=3 uid="uid://dsycxcakay6h8"]

[ext_resource type="Script" path="res://Scripts/Creature.gd" id="1_01bph"]
[ext_resource type="Texture2D" uid="uid://7rp7tk5tlb1m" path="res://Sprites/Creatures/creature2_blue.png" id="1_vbe5j"]
[ext_resource type="Texture2D" uid="uid://csubn0t1qpfow" path="res://Sprites/creature2_blue_white_border.png" id="3_o5ekt"]
[ext_resource type="Texture2D" uid="uid://hs5h70vwdnfj" path="res://Sprites/Creatures/creature2_white_border.png" id="3_ulpcw"]
[ext_resource type="Texture2D" uid="uid://bj7pm75smwnqp" path="res://Sprites/creature2_blue.png" id="4_amhl2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ekt"]
atlas = ExtResource("4_amhl2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f27es"]
atlas = ExtResource("4_amhl2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lvug"]
atlas = ExtResource("4_amhl2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnnh7"]
atlas = ExtResource("4_amhl2")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v2f6"]
atlas = ExtResource("4_amhl2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8eks"]
atlas = ExtResource("4_amhl2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap3gg"]
atlas = ExtResource("4_amhl2")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pecd4"]
atlas = ExtResource("4_amhl2")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j44cu"]
atlas = ExtResource("4_amhl2")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnaf7"]
atlas = ExtResource("4_amhl2")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebgqa"]
atlas = ExtResource("4_amhl2")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg616"]
atlas = ExtResource("4_amhl2")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pnt7b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ekt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f27es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lvug")
}],
"loop": true,
"name": &"idle-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnnh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v2f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8eks")
}],
"loop": true,
"name": &"idle-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap3gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pecd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j44cu")
}],
"loop": true,
"name": &"idle-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnaf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebgqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg616")
}],
"loop": true,
"name": &"idle-up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pnt7b"]
atlas = ExtResource("3_o5ekt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_686wa"]
atlas = ExtResource("3_o5ekt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_li2mp"]
atlas = ExtResource("3_o5ekt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl681"]
atlas = ExtResource("3_o5ekt")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgscf"]
atlas = ExtResource("3_o5ekt")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04brp"]
atlas = ExtResource("3_o5ekt")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5de1"]
atlas = ExtResource("3_o5ekt")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5jct"]
atlas = ExtResource("3_o5ekt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swam8"]
atlas = ExtResource("3_o5ekt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lqg3"]
atlas = ExtResource("3_o5ekt")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vtce"]
atlas = ExtResource("3_o5ekt")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgu44"]
atlas = ExtResource("3_o5ekt")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujita"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnt7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_686wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li2mp")
}],
"loop": true,
"name": &"idle-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgscf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04brp")
}],
"loop": true,
"name": &"idle-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5de1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5jct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swam8")
}],
"loop": true,
"name": &"idle-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lqg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vtce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgu44")
}],
"loop": true,
"name": &"idle-up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_686wa"]
resource_name = "IdleDown"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSpriteCreature:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSpriteCreature:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle-down"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-down"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_rhkh2"]
resource_name = "IdleLeft"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSpriteCreature:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSpriteCreature:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle-left"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-left"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_absrx"]
resource_name = "IdleRight"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSpriteCreature:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSpriteCreature:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle-right"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-right"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_2a2x6"]
resource_name = "IdleUp"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSpriteCreature:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSpriteCreature:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle-up"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-up"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_li2mp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSpriteCreature:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle-down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSpriteCreature:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-down"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kl681"]
_data = {
&"IdleDown": SubResource("Animation_686wa"),
&"IdleLeft": SubResource("Animation_rhkh2"),
&"IdleRight": SubResource("Animation_absrx"),
&"IdleUp": SubResource("Animation_2a2x6"),
&"RESET": SubResource("Animation_li2mp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8verg"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tp0to"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_daqc6"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rq5n7"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0v2f6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8verg")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_tp0to")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_daqc6")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rq5n7")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_x8eks"]
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_0v2f6")
nodes/BlendSpace2D/position = Vector2(60, 100)
node_connections = [&"output", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ap3gg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6v06q"]
states/Idle/node = SubResource("AnimationNodeBlendTree_x8eks")
states/Idle/position = Vector2(512, 100)
states/Start/position = Vector2(208, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ap3gg")]
graph_offset = Vector2(9, -9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulpcw"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01bph"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_ktm42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSpriteCreature:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteBorder:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_ulpcw"]
resource_name = "Shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disappear"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSpriteCreature:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSpriteBorder:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_idm37"]
_data = {
&"RESET": SubResource("Animation_ktm42"),
&"Shrink": SubResource("Animation_ulpcw")
}

[node name="CreatureBlue" type="CharacterBody2D" groups=["creature"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_01bph")
own_color = 1
desired_color = 2

[node name="AnimatedSpriteCreature" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pnt7b")
animation = &"idle-down"

[node name="AnimatedSpriteBorder" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ujita")
animation = &"idle-down"

[node name="AnimationPlayerMovement" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kl681")
}
autoplay = "IdleDown"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6v06q")
anim_player = NodePath("../AnimationPlayerMovement")
parameters/Idle/BlendSpace2D/blend_position = Vector2(-0.00303954, 0.35426)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("1_vbe5j")

[node name="Border" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("3_ulpcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_ulpcw")

[node name="Area2D_Right" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Right" type="CollisionShape2D" parent="Area2D_Right"]
position = Vector2(64, 0)
shape = SubResource("RectangleShape2D_01bph")

[node name="Area2D_Bottom" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Bottom" type="CollisionShape2D" parent="Area2D_Bottom"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_01bph")

[node name="Area2D_Left" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Left" type="CollisionShape2D" parent="Area2D_Left"]
position = Vector2(-64, 0)
shape = SubResource("RectangleShape2D_01bph")

[node name="Area2D_Top" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Top" type="CollisionShape2D" parent="Area2D_Top"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_01bph")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_idm37")
}

[connection signal="body_entered" from="Area2D_Right" to="." method="on_creature_to_right"]
[connection signal="body_exited" from="Area2D_Right" to="." method="_on_creature_right_gone"]
[connection signal="body_entered" from="Area2D_Bottom" to="." method="on_creature_to_bottom"]
[connection signal="body_exited" from="Area2D_Bottom" to="." method="_on_creature_bottom_gone"]
[connection signal="body_entered" from="Area2D_Left" to="." method="on_creature_to_left"]
[connection signal="body_exited" from="Area2D_Left" to="." method="_on_creature_left_gone"]
[connection signal="body_entered" from="Area2D_Top" to="." method="on_creature_to_top"]
[connection signal="body_exited" from="Area2D_Top" to="." method="_on_creature_top_gone"]
